--- a/class-08-crud-a-resource/pair-assignment/starter-code/index.html
+++ b/class-08-crud-a-resource/pair-assignment/starter-code/index.html
@@ -77,13 +77,16 @@
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
 
-    <script src="/vendor/scripts/jquery-2.1.4.js"></script>
-    <script src="/vendor/scripts/handlebars.js"></script>
-    <script src="/vendor/scripts/marked.js"></script>
-    <!-- TODO: Include the script files we need, that give us an API to the WebSQL feature of Chrome: -->
+    <script src="vendor/scripts/jquery-2.1.4.js"></script>
+    <script src="vendor/scripts/handlebars.js"></script>
+    <script src="vendor/scripts/marked.js"></script>
+    <!-- : Include the script files we need, that give us an API to the WebSQL feature of Chrome: -->
+    <!-- Might need to link these script files in other html files as well -->
+    <script src="vendor/scripts/html5sql.js"></script>
+    <script src="scripts/webdb.js"></script>
 
-    <script src="/scripts/article.js"></script>
-    <script src="/scripts/articleView.js"></script>
+    <script src="scripts/article.js"></script>
+    <script src="scripts/articleView.js"></script>
     <script>
       // DONE: Ensure that a database table for articles exists, every time we load the page.
       Article.createTable();
