--- a/class-08-crud-a-resource/pair-assignment/starter-code/new.html
+++ b/class-08-crud-a-resource/pair-assignment/starter-code/new.html
@@ -83,6 +83,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <script src="vendor/scripts/marked.js"></script>
+
+    <script src="vendor/scripts/html5sql.js"></script>
+    <script src="scripts/webdb.js"></script>
+
     <script src="vendor/scripts/highlight.pack.js"></script>
     <script src="scripts/article.js"></script>
     <script src="scripts/articleView.js"></script>
