expanded templates and stopped filtering repos

--- a/class-12-REST-and-APIs/sam-kent/index.html
+++ b/class-12-REST-and-APIs/sam-kent/index.html
@@ -25,7 +25,16 @@
     </script>
 
     <script id="repo-template" type="text/x-handlebars-template">
-      <li>{{name}}</li>
+      <li>
+        <h3>{{name}}</h3>
+        <p>Description: {{description}}</p>
+        <p>Language: {{language}}</p>
+        <p>Created: {{created_at}}</p>
+        <p>Last updated: {{updated_at}}</p>
+        {{#if watchers_count}}
+          <p>{{watchers_count}} watching this repo</p>
+        {{/if}}
+      </li>
     </script>
 
   </head>
