added links to repo template

--- a/class-12-REST-and-APIs/sam-kent/index.html
+++ b/class-12-REST-and-APIs/sam-kent/index.html
@@ -26,7 +26,7 @@
 
     <script id="repo-template" type="text/x-handlebars-template">
       <li>
-        <h3>{{name}}</h3>
+        <a href="{{html_url}}" target="_blank"><h3>{{name}}</h3></a>
         <p>Description: {{description}}</p>
         <p>Language: {{language}}</p>
         <p>Created: {{created_at}}</p>
